# wsitk-utils

./: README.md  pyproject.toml
src/wsitk_utils/: __init__.py  wsi2ometiff.py  wsi2zarr.py
