[project]
name = "wsitk-utils"
version = "0.1.0"
description = "Tools to work with whole slide images (WSI)."
readme = "README.md"
authors = [
    { name = "vladpopovici", email = "popovici@bioxlab.org" }
]
requires-python = ">=3.12"
dependencies = [
    "configargparse>=1.7",
    "pyvips>=2.2.3",
    "wsitk-core",
]

[project.scripts]
wsitk-utils = "wsitk_utils:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
wsitk-core = { git = "https://github.com/vladpopovici/wsitk-core" }
